cmake_minimum_required(VERSION 3.26)
project(Controle_de_Piscinas)

set(CMAKE_CXX_STANDARD 14)

add_executable(Controle_de_Piscinas
        .idea/.gitignore
        .idea/Controle-de-Piscinas.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .gitignore
        LICENSE
        README.md
        pool_club.c)
